k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sinapipro-api
  namespace: sinapipro
  labels:
    app: sinapipro-api
spec:
  type: ClusterIP
  selector:
    app: sinapipro-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: management
      port: 8081
      targetPort: 8081
