k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sinapipro-ingress
  namespace: sinapipro
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sinapipro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sinapipro-api
                port:
                  number: 80
